Onboarding goals default listing screen
remp/remp#894

--- a/src/config/config.neon
+++ b/src/config/config.neon
@@ -2,3 +2,5 @@ services:
 	moduleManager:
 		setup:
 			- addModule(Crm\OnboardingModule\OnboardingModule())
+
+	- Crm\OnboardingModule\Repository\OnboardingGoalsRepository
