Onboarding goals edit and show forms
remp/remp#894

--- a/src/config/config.neon
+++ b/src/config/config.neon
@@ -4,3 +4,4 @@ services:
 			- addModule(Crm\OnboardingModule\OnboardingModule())
 
 	- Crm\OnboardingModule\Repository\OnboardingGoalsRepository
+	- Crm\OnboardingModule\Forms\OnboardingGoalFormFactory
