--- a/src/lang/onboarding.cs_CZ.neon
+++ b/src/lang/onboarding.cs_CZ.neon
@@ -5,3 +5,23 @@ admin:
 		default:
 			title: Onboarding cíle
 			new: Nový cíl
+		new:
+			title: Nový cíl
+			back: Zpět
+		edit:
+			title: Úprava cíle
+			back: Zpět
+		show:
+			edit: Upravit
+			back: Zpět
+		messages:
+			goal_created: Cíl vytvořen
+			goal_updated: Cíl aktualizován
+			goal_not_found: Cíl nenalezen
+data:
+	goals:
+		fields:
+			name: Názov
+			code: Kód
+			type: Typ
+			created_at: Vytvořený
