Onboarding goal completed event and handler
remp/crm#894

--- a/src/config/config.neon
+++ b/src/config/config.neon
@@ -4,4 +4,6 @@ services:
 			- addModule(Crm\OnboardingModule\OnboardingModule())
 
 	- Crm\OnboardingModule\Repository\OnboardingGoalsRepository
+	- Crm\OnboardingModule\Repository\UserOnboardingGoalsRepository
 	- Crm\OnboardingModule\Forms\OnboardingGoalFormFactory
+	- Crm\OnboardingModule\Events\OnboardingGoalCompletedHandler
