API for listing onboarding goals
remp/crm#894

--- a/src/config/config.neon
+++ b/src/config/config.neon
@@ -4,6 +4,7 @@ services:
 			- addModule(Crm\OnboardingModule\OnboardingModule())
 
 	- Crm\OnboardingModule\Api\OnboardingGoalCompletedHandler
+	- Crm\OnboardingModule\Api\OnboardingGoalsListHandler
 	- Crm\OnboardingModule\Events\OnboardingGoalCompletedHandler
 	- Crm\OnboardingModule\Forms\OnboardingGoalFormFactory
 	- Crm\OnboardingModule\Repository\OnboardingGoalsRepository
