Onboarding progress widget
Widget displaying onboarding progress in user detail - onboarding goals together with their completition

remp/crm#899

--- a/src/config/config.neon
+++ b/src/config/config.neon
@@ -5,6 +5,7 @@ services:
 
 	- Crm\OnboardingModule\Api\OnboardingGoalCompletedHandler
 	- Crm\OnboardingModule\Api\OnboardingGoalsListHandler
+	- Crm\OnboardingModule\Components\OnboardingProgress
 	- Crm\OnboardingModule\Forms\OnboardingGoalFormFactory
 	- Crm\OnboardingModule\Repository\OnboardingGoalsRepository
 	- Crm\OnboardingModule\Repository\UserOnboardingGoalsRepository
