--- a/src/lang/onboarding.cs_CZ.neon
+++ b/src/lang/onboarding.cs_CZ.neon
@@ -1,5 +1,13 @@
 menu:
 	onboarding_goals: Onboarding cíle
+component:
+	onboarding_progress:
+		header: Onboarding progress
+		completed_at: Splněn v čase
+		completed: Splněn
+		yes: Ano
+		no_goals: Žádné cíle
+		no_goals_desc: Žádné cíle nejsou definovány
 admin:
 	onboarding_goals:
 		default:
