--- a/src/lang/onboarding.en_US.neon
+++ b/src/lang/onboarding.en_US.neon
@@ -1,5 +1,13 @@
 menu:
 	onboarding_goals: Onboarding goals
+component:
+	onboarding_progress:
+		header: Onboarding progress
+		completed_at: Completed at
+		completed: Completed
+		yes: "Yes"
+		no_goals: No goals
+		no_goals_desc: No goals are defined
 admin:
 	onboarding_goals:
 		default:
