Onboarding progress displays only completed goals
remp/crm#899

--- a/src/lang/onboarding.en_US.neon
+++ b/src/lang/onboarding.en_US.neon
@@ -2,9 +2,8 @@ menu:
 	onboarding_goals: Onboarding goals
 component:
 	onboarding_progress:
-		header: Onboarding progress
+		header: Onboarding goals
 		completed_at: Completed at
-		completed: Completed
 		yes: "Yes"
 		no_goals: No goals
 		no_goals_desc: No goals are defined
