--- a/src/lang/onboarding.cs_CZ.neon
+++ b/src/lang/onboarding.cs_CZ.neon
@@ -2,9 +2,8 @@ menu:
 	onboarding_goals: Onboarding cíle
 component:
 	onboarding_progress:
-		header: Onboarding progress
+		header: Onboarding cíle
 		completed_at: Splněn v čase
-		completed: Splněn
 		yes: Ano
 		no_goals: Žádné cíle
 		no_goals_desc: Žádné cíle nejsou definovány
