--- a/src/lang/onboarding.cs_CZ.neon
+++ b/src/lang/onboarding.cs_CZ.neon
@@ -27,8 +27,10 @@ admin:
 			completion_graph_title: Počet dokončení cíle
 			completion_graph_help: Počet dokončení cíle za definované časové období
 			flow_graph:
-				title: Registrace a platba uživatelů před a po splnění cíle
-				help: "Graf ukazuje, jak dlouho trvalo uživatelům dokončení cíle od registrace a jak dlouho trvalo, než si zakoupili předplatné po dokončení cíle."
+				title_registration: Počet dní do splnění cíle od registrace
+				help_registration: "Graf ukazuje, jak dlouho trvalo uživatelům dokončení cíle od registrace a zda byl uživatel předplatitel v době splnění cíle."
+				title_first_payment: Počet dní do první platby od splnění cíle
+				help_first_payment: "Graf ukazuje, jak dlouho trvalo uživatelům zakoupení předplatného (pro ty který ho ještě nevlastnili) od splnění cíle."
 				from: od
 				to: do
 				users_count: Počet uživatelů
