Keyed repositories in extensions
remp/crm#1103

--- a/src/config/config.neon
+++ b/src/config/config.neon
@@ -3,9 +3,10 @@ services:
 		setup:
 			- addModule(Crm\OnboardingModule\OnboardingModule())
 
+	onboardingGoalsRepository: Crm\OnboardingModule\Repository\OnboardingGoalsRepository
+	userOnboardingGoalsRepository: Crm\OnboardingModule\Repository\UserOnboardingGoalsRepository
+
 	- Crm\OnboardingModule\Api\OnboardingGoalCompletedHandler
 	- Crm\OnboardingModule\Api\OnboardingGoalsListHandler
 	- Crm\OnboardingModule\Components\OnboardingProgress
 	- Crm\OnboardingModule\Forms\OnboardingGoalFormFactory
-	- Crm\OnboardingModule\Repository\OnboardingGoalsRepository
-	- Crm\OnboardingModule\Repository\UserOnboardingGoalsRepository
