--- a/src/config/config.neon
+++ b/src/config/config.neon
@@ -10,5 +10,5 @@ services:
 	- Crm\OnboardingModule\Api\OnboardingGoalsListHandler
 	- Crm\OnboardingModule\Components\OnboardingProgress
 	- Crm\OnboardingModule\Forms\OnboardingGoalFormFactory
-
 	- Crm\OnboardingModule\Scenarios\OnboardingGoalCompletedCriteria
+	- Crm\OnboardingModule\Seeders\SegmentsSeeder
