Add/update segment when goal is created/updated
When onboarding goal is created / updated, event is emitted
and segment of onboarding goal is created or updated.

remp/crm#1705

--- a/src/config/config.neon
+++ b/src/config/config.neon
@@ -9,6 +9,8 @@ services:
 	- Crm\OnboardingModule\Api\OnboardingGoalCompletedHandler
 	- Crm\OnboardingModule\Api\OnboardingGoalsListHandler
 	- Crm\OnboardingModule\Components\OnboardingProgress
+	- Crm\OnboardingModule\Events\OnboardingGoalCreatedEventHandler
+	- Crm\OnboardingModule\Events\OnboardingGoalUpdatedEventHandler
 	- Crm\OnboardingModule\Forms\OnboardingGoalFormFactory
 	- Crm\OnboardingModule\Scenarios\OnboardingGoalCompletedCriteria
 	- Crm\OnboardingModule\Seeders\SegmentsSeeder
