Add scenario criteria to check user completed goal
New condition criteria for ScenariosModule adds option to filter users
who completed selected onboarding goals.

remp/crm#1764

--- a/src/lang/onboarding.cs_CZ.neon
+++ b/src/lang/onboarding.cs_CZ.neon
@@ -50,3 +50,8 @@ data:
 			code: Kód
 			type: Typ
 			created_at: Vytvořený
+
+scenarios:
+	criteria:
+		completed_goal:
+			label: Dokončil onboarding gól
