--- a/src/lang/onboarding.sk_SK.neon
+++ b/src/lang/onboarding.sk_SK.neon
@@ -50,3 +50,8 @@ data:
 			code: Kód
 			type: Typ
 			created_at: Vytvorený
+
+scenarios:
+	criteria:
+		completed_goal:
+			label: Dokončil onboarding gól
