Add TimeframeParam, use it in OnboardingGoalCompletedCriteria
- Added new type of parameter for scenario criteria handling operator,
  value and unit.
- Used it in `OnboardingGoalCompletedCriteria` where it handles check
  of user's completed goals within timeframe set in scenario's condition
  node.

With this new param, scenario can contain condition which checks not
only if user completed goal, but it can also check (eg.) if user completed
this goal within last year. This condition can be used together with
goal node to filter our users who completed goal in past.

remp/crm#1764

--- a/src/lang/onboarding.en_US.neon
+++ b/src/lang/onboarding.en_US.neon
@@ -57,3 +57,9 @@ scenarios:
 	criteria:
 		completed_goal:
 			label: Completed onboarding goal
+			goal_param:
+				label: Goal
+			timeframe_param:
+				label: Timeframe
+				amount_label: Amount
+				units_label: Time unit
