Fix translation files; use double quotes around one single quote
NEON parser doesn't like it very much.

Also fixed yes/no and non-string keys.

remp/crm#2276

--- a/src/lang/onboarding.cs_CZ.neon
+++ b/src/lang/onboarding.cs_CZ.neon
@@ -4,7 +4,7 @@ component:
 	onboarding_progress:
 		header: Onboarding cíle
 		completed_at: Splněn v čase
-		yes: Ano
+		"yes": Ano
 		no_goals: Žádné cíle
 		no_goals_desc: Žádné cíle nejsou definovány
 admin:
