--- a/src/lang/onboarding.en_US.neon
+++ b/src/lang/onboarding.en_US.neon
@@ -4,7 +4,7 @@ component:
 	onboarding_progress:
 		header: Onboarding goals
 		completed_at: Completed at
-		yes: "Yes"
+		"yes": "Yes"
 		no_goals: No goals
 		no_goals_desc: No goals are defined
 admin:
